# power-dialer

./: .gitignore  README.md  main.py  pyproject.toml
krispcall/auth/: constant.py  enums.py  requires_auth_power_dialer.py
krispcall/campaigns/: services.py
krispcall/campaigns/adapters/: orm.py  repositories.py
krispcall/campaigns/alembic_versions/: 31414297f9ca_campaign_stats_table.py  37d7a7a3c57a_campaign_status_enum__added.py  49af252c9d82_call_script_created_by_name_added.py  5443bbe4d419_voicemail_created_by_name_added.py  589bfa044008_contact_list_created_by_name.py  5aa35ee08e27_campaign_call_notes_table.py  637155bdfda0_init_campaigns_tables.py  86984855d1e0_add_callable_pickle_type_to_cmpaigns_.py  e343c7fa2ca4_created_by_name_added.py
krispcall/campaigns/domain/: commands.py  models.py
krispcall/campaigns/entrypoints/: queue_handlers.py
krispcall/campaigns/schemas/: schema.graphql  types.graphql
krispcall/campaigns/service_layer/: abstracts.py  exceptions.py  handlers.py  helpers.py  unit_of_work.py  views.py
krispcall/common/: abstracts.py  app_settings.py  bootstrap.py  datetime.py  exceptions.py  graphql.py  http_status_code.py  jwt.py  log_config.py  request_helpers.py  responses.py  security_constants.py  shortid.py  with_response.py
krispcall/common/app_settings/: request_helpers.py
krispcall/common/auth_utils/: jwt.py
krispcall/common/configs/: app_settings.py  log_config.py  request_helpers.py
krispcall/common/database/: bootstrap.py  connection.py  exceptions.py  repository.py  settings.py  unit_of_work.py
krispcall/common/domain/: commands.py  event.py  jwt.py  value_objects.py
krispcall/common/locales/: __init__.py
krispcall/konference/: services.py
krispcall/providers/: foundation_provider.py  rpcaddress.py
krispcall/twilio/: __init__ copy.py  application_resource.py  call_resource.py  caller_id_resource.py  conference_resource.py  enums.py  errorHelper.py  eventHandler.py  event_streams_resource.py  event_subscription_resource.py  incoming_phone_number_resource.py  models.py  phone_number_resource.py  recording_resource.py  sms_resource.py  transcription_resource.py  twilio_client.py  type.py  usage_triggers.py  utils.py
salesapi/: cli.py  console.py  graphql_schema.py  middlewares.py  pd_worker.py  rpc_worker.py  sales_app.py  settings.py
salesapi/alembic/: env.py  script.py.mako
salesapi/schemas/: mutations.graphql  queries.graphql
salesapi/workers/: pd_worker.py
(+103 files in other folders)
