[tool.poetry]
name = "power-dialer"
version = "0.1.0"
description = "Power Dialer module"
authors = ["nawaraj subedi <nawarajsubedi41@gmail.com>"]
license = "krispcall"
readme = "README.md"
packages = [{include = "krispcall"}]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.50.0"
grpcio-tools = "^1.50.0"
pydantic = "^2.5.3"
shortuuid = "^1.0.11"
redis = "5.0.0"
arq = "0.25"
asyncio-redis = "^0.16.0"
aioredis = "1.3.1"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
