[tool.poetry]
name = "power-dialer"
version = "0.1.0"
description = "Power Dialer module"
authors = ["nawaraj subedi <nawarajsubedi41@gmail.com>"]
license = "krispcall"
readme = "README.md"
packages = [{include = "krispcall"}]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "0.31.0"
itsdangerous = "2.1.2"
uvicorn = "0.23.2"
grpcio = "^1.50.0"
grpcio-tools = "^1.50.0"
ariadne = "0.21.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
pydantic-vault = "^0.7.2"
shortuuid = "^1.0.11"
redis = "5.0.0"
arq = "0.25"
asyncio-redis = "^0.16.0"
aioredis = "1.3.1"
loguru = "^0.5.3"
twilio = ">=6.51.1"
toolz = "^0.12.0"
databases = "0.4.3"
sqlalchemy = "1.3.24"
asyncpg = "^0.28.0"
alembic = "^1.4.3"
pendulum = "^2.1.2"
python-jose = "^3.3.0"
aiobotocore = "^1.4.0"
pandas = "^1.2.4"
PyYAML = "5.4.1"
rollbar = "^0.16.3"
python-multipart = "^0.0.5"
fire = "^0.3.1"

[tool.poetry.scripts]
cli = "salesapi.sales_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
